# rbe500

./: .gitignore
.claude/: settings.json
homework/hw2/: hw2.aux  hw2.out  hw2.tex  hw2.toc
homework/hw3/: hw3.aux  hw3.out  hw3.tex  hw3.toc
homework/hw4/: hw4.aux  hw4.out  hw4.tex  hw4.toc
homework/hw5/: hw5.aux  hw5.out  hw5.tex
homework/hw6/: hw6.tex
homework/hw7/: hw7.tex
homework/pa1/: pa1.aux  pa1.out  pa1.tex  pa1.toc
project_assignments/pa2/: joint3_log.csv  pa2.tex  plot_joint3.m
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/irb1400_fk/lib/irb1400_fk/: fk_node
ros2_ws/install/irb1400_fk/share/irb1400_fk/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/quat_to_euler/share/quat_to_euler/: package.ps1  package.sh
ros2_ws/install/rbe500_hw1/lib/rbe500_hw1/: publisher  subscriber
ros2_ws/install/rbe500_hw1/share/rbe500_hw1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/scara_description/share/scara_description/: package.ps1  package.sh
ros2_ws/install/scara_description/share/scara_description/config/: scara.config.xacro
ros2_ws/install/scara_description/share/scara_description/launch/: scara.launch.py
ros2_ws/install/scara_fk/lib/scara_fk/: fk_node
ros2_ws/install/scara_fk/share/scara_fk/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/scara_ik/share/scara_ik/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/scara_ik_node/lib/scara_ik_node/: ik_node
ros2_ws/install/scara_ik_node/share/scara_ik_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/irb1400_fk/: setup.cfg  setup.py
ros2_ws/src/irb1400_fk/irb1400_fk/: fk_node.py
ros2_ws/src/irb1400_fk/irb1400_fk/install/: local_setup.sh  setup.sh
ros2_ws/src/irb1400_fk/irb1400_fk/log/: latest_build
ros2_ws/src/quat_to_euler/: package.xml  setup.py
ros2_ws/src/rbe500_hw1/: setup.cfg  setup.py
ros2_ws/src/rbe500_hw1/rbe500_hw1/: subscriber.py
ros2_ws/src/scara_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/scara_controller/scara_controller/: controller_node.py
ros2_ws/src/scara_description/: CMakeLists.txt  package.xml
ros2_ws/src/scara_description/config/: materials.urdf
ros2_ws/src/scara_description/launch/: scara.launch.py
ros2_ws/src/scara_description/urdf/: scara.urdf
ros2_ws/src/scara_fk/: package.xml  setup.cfg  setup.py
ros2_ws/src/scara_fk/scara_fk/: fk_node.py
ros2_ws/src/scara_ik/: CMakeLists.txt  package.xml  setup.cfg
ros2_ws/src/scara_ik/scara_ik/: ik_node.py
ros2_ws/src/scara_ik/srv/: EEToJointVelocity.srv  ScaraIK.srv  joint_to_ee_velocity.srv
ros2_ws/src/scara_ik_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/scara_ik_node/scara_ik_node/: ik_node.py
ros2_ws/src/scara_velocity_kinematics/: package.xml  setup.cfg  setup.py
ros2_ws/src/scara_velocity_kinematics/scara_velocity_kinematics/: vk_node.py
ros2_ws/src/velocity_kinematics/: CMakeLists.txt  package.xml
ros2_ws/src/velocity_kinematics/srv/: EEToJointVelocity.srv  JointToEEVelocity.srv
scara_description/scara_description/: package.xml:Zone.Identifier
scara_description/scara_description/launch/: scara.launch.py
(+31 files in other folders)
