<?xml version="1.0"?>
<package format="3">
  <name>scara_ik_node</name>
  <version>0.0.0</version>
  <description>SCARA IK node</description>
  <maintainer email="tracy@todo.todo">tracy</maintainer>
  <license>TODO</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>scara_ik</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
